# cryptotax_backend

./: .gitignore  Makefile  README.md  celerybeat-schedule.dir  docker-compose.yml  entrypoint.sh  init.md  manage.py  requirements.txt
backend/: .flake8  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/.sql_queries/: cleanup_failed_analysises.sql  consumable_from_deposit.sql  reset_processable_dates.txt  select orders.txt
backend/.sql_queries/analysis/: allocate_for_sell_fifo.sql  analysis_detail.sql  fetch_oldest_analysable_prototype.sql  list_analysises_of_portfolio.sql
backend/.sql_queries/report/: sell_detailed_report.sql  sold_currencies.sql
backend/.sql_queries/views/: one_wallet_eth_mining_deposit.sql
backend/cryptotax_backend/: __init__.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
backend/portfolio/: db.py  models.py  views.py
backend/portfolio/helper/: rand.py
backend/tax_analysis/: urls.py
backend/tax_analysis/analysis_worker/: analysis_worker.py  processor_worker.py
backend/tax_analysis/db/: processing_analysis.py
backend/templates/: base_notification.html
backend/templates/email/: email_base.html  email_base.txt  email_base_button.html  email_base_link.html  email_base_text.html
backend/user/: auth.py  auth_forms.py  auth_urls.py  auth_views.py  models.py  urls.py  views.py
backend/user/view_helpers/: auth_backend.py  auth_serializer.py
backend/utils/: mail_utils.py  response_wrappers.py
backend/utils/auth/: decorators.py
backend/utils/exceptions/: exception_handlers.py  (+1 more)
(+146 files in other folders)
